data/all_generated_tests/raw_wast_tests/if_UnreachableCodeExecution_1475.wast
;; 6. Develop a structure where an `if` with a true condition has no `else` block and mistakenly ends with an `unreachable` instruction outside any structure or block context. Ensure correct framework/error handling and jump checks prevent reaching the `unreachable`.

(assert_invalid
  (module
    (func $test
      (i32.const 1)
      (if (result i32)
        (then (i32.const 42))
      )
      (unreachable)
    )
  )
  "unreachable instruction outside block context"
)